2017-01-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "credentials" is now in gvm-libs/base.

	* base/credentials.c, base/credentials.h: Removed.

	* base/CMakeLists.txt: Removed handling of this module.

	* COPYING: Removed the files respectively.

2017-01-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "drop_privileges" is now in gvm-libs/base.

	* base/drop_privileges.c, base/drop_privileges.h: Removed.

	* base/CMakeLists.txt: Removed handling of this module.

	* COPYING: Removed the files respectively.

2016-12-27  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "openvas_string" is now in gvm-libs/base.

	* base/openvas_sring.c, base/openvas_sring.h: Removed.

	* base/CMakeLists.txt: Removed handling of this module.

	* COPYING: Removed the files respectively. Also removed some
	other files that are not present anymore.

	* base/credentials.c (append_to_credentials_username,
	append_to_credentials_password): Use gvm_append_text instead
	of openvas_append_text.

	* misc/ldap_connect_auth.c: Removed unneeded include.

2016-12-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/openvas_string.c: Removed trace and log definition and
	includes that are not used in this module.

2016-12-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "openvas_networking" is now in gvm-libs/base.

	* base/openvas_networking.c, base/openvas_networking.h: Removed.

	* base/CMakeLists.txt: Removed handling of this module.

	* base/openvas_hosts.c (openvas_host_resolve): Use gsm_resolve instead
	of openvas_resolve.

	* base/openvas_hosts.h: Changed include to gvm/base/networking.h.

	* misc/network.c (open_socket): Use gvm_source_set_socket
	instead of openvas_source_set_socket.
	(open_sock_opt_hn): Use gvm_resolve_as_addr6 instead of
	openvas_resolve_as_addr6.

	* misc/network.h: Removed unneeded include.

	* misc/pcap.c (v6_routethrough): Use gvm_source_addr_as_addr6 instead