@@ -57,11 +57,11 @@ include_directories (${GLIB_INCLUDE_DIRS}
                      ${REDIS_INCLUDE_DIRS})
 
 if (MINGW)
-  set  (FILES openvas_hosts.c nvticache.c gpgme_util.c pwpolicy.c)
-  set (HEADERS openvas_hosts.h gpgme_util.h pwpolicy.h)
+  set  (FILES openvas_hosts.c nvticache.c gpgme_util.c)
+  set (HEADERS openvas_hosts.h gpgme_util.h)
 else (MINGW)
-  set (FILES openvas_hosts.c nvticache.c kb_redis.c gpgme_util.c pwpolicy.c)
-  set (HEADERS openvas_hosts.h kb.h nvticache.h gpgme_util.h pwpolicy.h)
+  set (FILES openvas_hosts.c nvticache.c kb_redis.c gpgme_util.c)
+  set (HEADERS openvas_hosts.h kb.h nvticache.h gpgme_util.h)
 endif (MINGW)
 
 if (BUILD_STATIC)
